--- a/diary_server/src/main/resources/application.properties
+++ b/diary_server/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/diary\
 spring.datasource.username=diary
 spring.datasource.password=diary
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.devtools.livereload.enabled=true
