--- a/diary_server/src/main/resources/application.properties
+++ b/diary_server/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/diary\
       &use.JDBCCompliantTimezoneShift=true\
       &useLegacyDatetimeCode=false
 
-spring.datasource.username=diary
-spring.datasource.password=diary
+spring.datasource.username=root
+spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.devtools.livereload.enabled=true
